examples/test/testpolicy13520.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13520
  namespace: namespace59
spec:
  podSelector:
    matchLabels:
      key11: value9
      key3: value10
      key37: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value4
          key42: value2
      podSelector:
        matchLabels:
          key19: value38
          key2: value49
          key40: value13
